--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -63,9 +63,14 @@ system(paste0('open ', outFile, ' -a "Microsoft Excel"'))
 To make it easier to fill in important `rmm` fields with some autofill functions for common objects
 ```{r}
 rmm=rangeModelMetadataTemplate(useCase='apAll')
-#rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
+rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
 # rmmAutoFillData(rmm,species=)
-# rmmAutoFillEnv(rmm,species=)
+raster.files=list.files(system.file("extdata/Env_Demo",package='rangeModelMetadata'),full.names = T)
+env=raster::stack(raster.files)
+# for fitting environment
+rmm=rmmAutofillEnvironment(rmm,env,transfer=0)
+rmm=rmmAutofillEnvironment(rmm,env,transfer=1)
+rmm=rmmAutofillEnvironment(rmm,env,transfer=2)
 # rmmAutoFillTransferEnv(rmm,layer=1)
 # rmmAutoFillMaxent(rmm,species=)
 # rmmAutoFillPrediction(rmm,species=,layer=1)
