found issue with toCSV for my examples

--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -67,14 +67,12 @@ rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
 # rmmAutoFillData(rmm,species=)
 raster.files=list.files(system.file("extdata/Env_Demo",package='rangeModelMetadata'),full.names = T)
 env=raster::stack(raster.files)
-# for fitting environment
-rmm=rmmAutofillEnvironment(rmm,env,transfer=0)
-rmm=rmmAutofillEnvironment(rmm,env,transfer=1)
-rmm=rmmAutofillEnvironment(rmm,env,transfer=2)
-# rmmAutoFillTransferEnv(rmm,layer=1)
+rmm=rmmAutofillEnvironment(rmm,env,transfer=0) # for fitting environment
+rmm=rmmAutofillEnvironment(rmm,env,transfer=1) # for transfer environment 1 (assuming different than for fitting)
+rmm=rmmAutofillEnvironment(rmm,env,transfer=2) # for transfer environment 2 (assuming different than for fitting)
 # rmmAutoFillMaxent(rmm,species=)
 # rmmAutoFillPrediction(rmm,species=,layer=1)
-# rmmPrintFull(rmm) #print just the non-NULL fields
+rmmPrintFull(rmm) #print just the non-NULL fields
 ```
 
 To see what fields you might've missed...
