--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -21,9 +21,11 @@ knitr::opts_chunk$set(echo = TRUE)
 library(rangeModelMetadata)
 ```
 
-A simple `rmm` object is a list.
+##What is an rmm (rangeModelMetadata) object?
+
+A simple `rmm` object is a list object that is structured to contain metadata pertaining to species range models.
 ```{r}
-rmm1=rangeModelMetadataTemplate(useCase='apObligate')
+rmm1=rangeModelMetadataTemplate(useCase='apObligate') #  Make an empty rmm object containing only the obligate set of fields.
 str(rmm1)
 ```
 
@@ -32,6 +34,10 @@ A more complex `rmm` object with all predefined fields.
 rmm2=rangeModelMetadataTemplate(useCase='apAll')
 str(rmm2)
 ```
+
+##Populating an rmm object
+
+rmm objects can be populated manually by entering data direcetly into the fields, or through the use of several helper functions.  Although rmm object template already contain a number of fields that depend on the specified `useCase`, users can also add new fields as needed.  We are able to provide suggestions of both common fields to add and common values for many fields.
 
 Not sure what to enter in different fields? We can suggest options.
 
@@ -50,14 +56,6 @@ rmmSuggest('model$maxent$')
 rmmSuggest('$model$maxent$featureSet')
 ```
 
-
-To make `rmm` objects portable to other interfaces, they are readily written to csv format.
-```{r,eval=F}
-outFile='~/Desktop/demo_rmmToCSV.csv'
-rmmObj=rangeModelMetadataTemplate('apAll')
-rmmToCSV(rmmObj,filename=outFile)
-system(paste0('open ', outFile, ' -a "Microsoft Excel"'))
-```
 
 To make it easier to fill in important `rmm` fields with some autofill functions for common objects
 ```{r}
@@ -80,4 +78,37 @@ To see what fields you might've missed...
 # rmmCleanEmpties(rmm)
 ```
 
+##Checking an rmm object
 
+To check the field names in your object, use the function `rmmNameCheck`
+
+```{r}
+
+rmm<-rangeModelMetadataTemplate() # Make an empty template
+rmm$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # Add a new, non-standard field
+rmmNameCheck(rmm) # Checking the names should identify the new, non-standard field we've added ("taxonomy_source")
+
+```
+
+To check the field values in your rmm object, use the function `rmmValueCheck`
+```{r}
+rmm<-rangeModelMetadataTemplate() #First, we create an empty rmm template
+rmm$data$environment$variableNames<- c("bio1", "bio 2", "bio3", "cromulent") #We add 3 of the bioclim layers, including a spelling error (an extra space) in bio2, and a word that is clearly not a climate layer, 'cromulent'.
+rmmValueCheck(rmm = rmm) #Now, when we check the values, we see that bio1 and bio2 are reported as exact matches, while 'bio 2' is flagged as a partial match with a suggested value of 'bio2', and 'cromulent' is flagged as not matched at all.
+
+#If we'd like to return a dataframe containing this information in a perhaps more useful format:
+rmmValueCheck_output<-rmmValueCheck(rmm = rmm,returnData = T)
+```
+
+These 'check' functions work by comparing the values or names within an rmm object to those in a data dictionary.  These functions are designed to check for non-standard values and names, and DO NOT necessarily identify correct vs. incorrect values/names.  Non-standard values may be perfectly valid, or they may be erroneous, and the user will have to make this distinction.
+
+
+##Outputing an rmm object
+
+To make `rmm` objects portable to other interfaces, they are readily written to csv format.
+```{r,eval=F}
+outFile='~/Desktop/demo_rmmToCSV.csv'
+rmmObj=rangeModelMetadataTemplate('apAll')
+rmmToCSV(rmmObj,filename=outFile)
+system(paste0('open ', outFile, ' -a "Microsoft Excel"'))
+```
