--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -86,7 +86,7 @@ To check the field names in your object, use the function `rmmNameCheck`
 
 rmm<-rangeModelMetadataTemplate() # Make an empty template
 rmm$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # Add a new, non-standard field
-rmmNameCheck(rmm) # Checking the names should identify the new, non-standard field we've added ("taxonomy_source")
+rmmCheckName(rmm) # Checking the names should identify the new, non-standard field we've added ("taxonomy_source")
 
 ```
 
@@ -94,10 +94,10 @@ To check the field values in your rmm object, use the function `rmmValueCheck`
 ```{r}
 rmm<-rangeModelMetadataTemplate() #First, we create an empty rmm template
 rmm$data$environment$variableNames<- c("bio1", "bio 2", "bio3", "cromulent") #We add 3 of the bioclim layers, including a spelling error (an extra space) in bio2, and a word that is clearly not a climate layer, 'cromulent'.
-rmmValueCheck(rmm = rmm) #Now, when we check the values, we see that bio1 and bio2 are reported as exact matches, while 'bio 2' is flagged as a partial match with a suggested value of 'bio2', and 'cromulent' is flagged as not matched at all.
+rmmCheckValue(rmm = rmm) #Now, when we check the values, we see that bio1 and bio2 are reported as exact matches, while 'bio 2' is flagged as a partial match with a suggested value of 'bio2', and 'cromulent' is flagged as not matched at all.
 
 #If we'd like to return a dataframe containing this information in a perhaps more useful format:
-rmmValueCheck_output<-rmmValueCheck(rmm = rmm,returnData = T)
+rmmCheckValue_output<-rmmCheckValue(rmm = rmm,returnData = T)
 ```
 
 These 'check' functions work by comparing the values or names within an rmm object to those in a data dictionary.  These functions are designed to check for non-standard values and names, and DO NOT necessarily identify correct vs. incorrect values/names.  Non-standard values may be perfectly valid, or they may be erroneous, and the user will have to make this distinction.
