--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -62,7 +62,7 @@ To make it easier to fill in important `rmm` fields with some autofill functions
 rmm=rangeModelMetadataTemplate(useCase='apAll')
 rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
 # rmmAutoFillData(rmm,species=)
-raster.files=list.files(system.file("extdata/Env_Demo",package='rangeModelMetadata'),full.names = T)
+raster.files=list.files(system.file("extdata/Env_Demo",package='rangeModelMetadata'),full.names = TRUE)
 env=raster::stack(raster.files)
 rmm=rmmAutofillEnvironment(rmm,env,transfer=0) # for fitting environment
 rmm=rmmAutofillEnvironment(rmm,env,transfer=1) # for transfer environment 1 (assuming different than for fitting)
@@ -86,7 +86,7 @@ To check the field names in your object, use the function `rmmNameCheck`
 
 rmm<-rangeModelMetadataTemplate() # Make an empty template
 rmm$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # Add a new, non-standard field
-rmmCheckName(rmm) # Checking the names should identify the new, non-standard field we've added ("taxonomy_source")
+rmm=rmmCheckName(rmm) # Checking the names should identify the new, non-standard field we've added ("taxonomy_source")
 
 ```
 
@@ -97,8 +97,17 @@ rmm$data$environment$variableNames<- c("bio1", "bio 2", "bio3", "cromulent") #We
 rmmCheckValue(rmm = rmm) #Now, when we check the values, we see that bio1 and bio2 are reported as exact matches, while 'bio 2' is flagged as a partial match with a suggested value of 'bio2', and 'cromulent' is flagged as not matched at all.
 
 #If we'd like to return a dataframe containing this information in a perhaps more useful format:
-rmmCheckValue_output<-rmmCheckValue(rmm = rmm,returnData = T)
+rmmCheckValue_output<-rmmCheckValue(rmm = rmm,returnData = TRUE)
 ```
+
+  <!-- names<-rmmCheckName(rmm,returnData = T) -->
+
+  <!-- values<-rmmCheckValue(rmm = rmm,returnData = T) -->
+
+  <!-- missing_names<-rmmCheckMissingNames(rmm,useCase = useCase) -->
+
+  <!-- empty_values<-rmmCheckEmpty(rmm = rmm,useCase = useCase) -->
+
 
 These 'check' functions work by comparing the values or names within an rmm object to those in a data dictionary.  These functions are designed to check for non-standard values and names, and DO NOT necessarily identify correct vs. incorrect values/names.  Non-standard values may be perfectly valid, or they may be erroneous, and the user will have to make this distinction.
 
