--- a/vignettes/rmm_directory.Rmd
+++ b/vignettes/rmm_directory.Rmd
@@ -10,7 +10,7 @@ vignette: >
 ---
 
 
-The rangeModelMetadata package is designed to provide functionality for working with rangeModelMetadata (rmm) objects.  These rmm objects are nested lists that hierarchically store data associated with species range/niche/distribution models.  These objects are designed to be flexible to accomodate a wide variety of modeling frameworks while also making modelling decisions transparent. 
+The rangeModelMetadata package is designed to provide functionality for working with rangeModelMetadata (`rmm`) objects.  These `rmm` objects are nested lists that hierarchically store data associated with species range/niche/distribution models.  These objects are designed to be flexible to accomodate a wide variety of modeling frameworks while also making modelling decisions transparent. 
 
 
 ##Function Directory
@@ -18,13 +18,13 @@ For full information on each function, see the associated help file.
 
 
 ##Function Types
-* rmm Primary functions are the most commonly used functions in the package and are usually where you start.
-* rmm Auto-fill functions take in R objects and automatically populate the relevant fields in an rmm object.  Autofill functions begin with the prefix "rmmAutofill"
-* rmm Check functions check for common errors in rmm objects.
+* `rmm` Primary functions are the most commonly used functions in the package and are usually where you start.
+* `rmmAutofill` functions take in R objects and automatically populate the relevant fields in an rmm object.  Autofill functions begin with the prefix "rmmAutofill"
+* `rmmCheck` functions check for common errors in rmm objects.
 
 ###Primary functions
-* `rangeModelMetadataTemplate` Creates an empty rmm object that can then be populated by the user.
-* `cleanForCSV` Helper function that facilitates converting rmm objects to csv if they containg objects that aren't easily coerced to characters.
+* `rangeModelMetadataTemplate` Creates an empty `rmm` object that can then be populated by the user.
+* `cleanForCSV` Helper function that facilitates converting `rmm` objects to csv if they contain objects that aren't easily coerced to characters.
 * `rmmPrintFull` Prints only the rmm fields that have been populated.
 * `rmmPrintEmpty` Checks for empty values in the rmm object.
 * `rmmToCSV` Converts the rmm object to a CSV file.
@@ -39,3 +39,14 @@ For full information on each function, see the associated help file.
 ###rmm Check functions
 * `rmmCheckName` Identifies non-standard name fields in an rmm object.
 * `rmmCheckValue` Checks a subset of rmm values against commonly used values and returns information on possible errors.
+
+
+
+
+
+
+
+
+
+
+
