--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -37,7 +37,7 @@ str(rmm2)
 
 ##Populating an rmm object
 
-rmm objects can be populated manually by entering data direcetly into the fields, or through the use of several helper functions.  Although rmm object template already contain a number of fields that depend on the specified `useCase`, users can also add new fields as needed.  We are able to provide suggestions of both common fields to add and common values for many fields.
+`rmm` objects can be populated manually by entering data direcetly into the fields, or through the use of several helper functions.  Although the `rmm` object template already contain a number of fields that depend on the specified `useCase`, users can also add new fields as needed.  We are able to provide suggestions of both common fields to add and common values for many fields.
 
 Not sure what to enter in different fields? We can suggest options.
 
@@ -48,7 +48,7 @@ rmmSuggest('dataPrep$errors$duplicateRemoval')
 rmmSuggest('dataPrep$errors$duplicateRemoval$rule')
 ```
 
-Another more complex example
+Another more complex example:
 
 ```{r}
 rmmSuggest('model')
@@ -57,7 +57,8 @@ rmmSuggest('$model$maxent$featureSet')
 ```
 
 
-To make it easier to fill in important `rmm` fields with some autofill functions for common objects
+To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in the 
+
 ```{r}
 rmm=rangeModelMetadataTemplate(useCase='apAll')
 rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
@@ -121,3 +122,15 @@ rmmObj=rangeModelMetadataTemplate('apAll')
 rmmToCSV(rmmObj,filename=outFile)
 system(paste0('open ', outFile, ' -a "Microsoft Excel"'))
 ```
+
+
+## Miscellaneous
+
+It can be helpful to simply view the data dictionary:
+
+```{r}
+dd=rmmDataDictionary()
+str(dd)
+# rmmDataDictionary(excel=TRUE) # try this if you have excel
+```
+
