--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -25,13 +25,13 @@ library(rangeModelMetadata)
 
 A simple `rmm` object is a list object that is structured to contain metadata pertaining to species range models.
 ```{r}
-rmm1=rangeModelMetadataTemplate(useCase='apObligate') #  Make an empty rmm object containing only the obligate set of fields.
+rmm1=rmmTemplate(useCase='apObligate') #  Make an empty rmm object containing only the obligate set of fields.
 str(rmm1)
 ```
 
 A more complex `rmm` object with all predefined fields.
 ```{r}
-rmm2=rangeModelMetadataTemplate(useCase='apAll')
+rmm2=rmmTemplate(useCase='apAll')
 str(rmm2)
 ```
 
@@ -60,7 +60,7 @@ rmmSuggest('$model$maxent$featureSet')
 To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in the 
 
 ```{r}
-rmm=rangeModelMetadataTemplate(useCase='apAll')
+rmm=rmmTemplate(useCase='apAll')
 rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
 # rmmAutoFillData(rmm,species=)
 raster.files=list.files(system.file("extdata/Env_Demo",package='rangeModelMetadata'),full.names = TRUE)
@@ -85,15 +85,16 @@ To check the field names in your object, use the function `rmmNameCheck`
 
 ```{r}
 
-rmm<-rangeModelMetadataTemplate() # Make an empty template
-rmm$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # Add a new, non-standard field
+rmm<-rmmTemplate() # Make an empty template
+rmm$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # # Add a new, non-standard field
+# temporary dev error
 rmm=rmmCheckName(rmm) # Checking the names should identify the new, non-standard field we've added ("taxonomy_source")
 
 ```
 
 To check the field values in your rmm object, use the function `rmmValueCheck`
 ```{r}
-rmm<-rangeModelMetadataTemplate() #First, we create an empty rmm template
+rmm<-rmmTemplate() #First, we create an empty rmm template
 rmm$data$environment$variableNames<- c("bio1", "bio 2", "bio3", "cromulent") #We add 3 of the bioclim layers, including a spelling error (an extra space) in bio2, and a word that is clearly not a climate layer, 'cromulent'.
 rmmCheckValue(rmm = rmm) #Now, when we check the values, we see that bio1 and bio2 are reported as exact matches, while 'bio 2' is flagged as a partial match with a suggested value of 'bio2', and 'cromulent' is flagged as not matched at all.
 
@@ -118,7 +119,7 @@ These 'check' functions work by comparing the values or names within an rmm obje
 To make `rmm` objects portable to other interfaces, they are readily written to csv format.
 ```{r,eval=F}
 outFile='~/Desktop/demo_rmmToCSV.csv'
-rmmObj=rangeModelMetadataTemplate('apAll')
+rmmObj=rmmTemplate('apAll')
 rmmToCSV(rmmObj,filename=outFile)
 system(paste0('open ', outFile, ' -a "Microsoft Excel"'))
 ```
