--- a/vignettes/rmm_workflow.Rmd
+++ b/vignettes/rmm_workflow.Rmd
@@ -19,25 +19,81 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(rangeModelMetadata)
+library(spocc)
+library(sp)
+library(raster)
+library(dismo)
+library(ENMeval)
+library(dplyr)
 ```
 
 #Build a range model
 
-Keep this as simple as possible while including many of the relevant fields. Maybe with ENMEval?
+```{r}
+# search GBIF for occurrence data
+bv <- occ('Bradypus variegatus', 'gbif', limit=300, has_coords=TRUE)
+# restrict table to coordinates
+occs <- bv$gbif$data$Bradypus_variegatus %>% select(longitude, latitude)
+# remove duplicate values
+occs <- occs[!duplicated(occs),]
+# get environmental rasters from dismo package folder
+files <- list.files(path=paste(system.file(package='dismo'), '/ex', sep=''), pattern='grd', full.names=TRUE)
+# make a stack of the rasters
+envs <- stack(files)
+# make a spatial points object for the occurrences
+occs.sp <- SpatialPoints(occs)
+# get the bounding box
+bb <- bbox(occs.sp)
+# Amake extent object and buffer by 5 degrees
+bb.buf <- extent(bb[1]-5, bb[3]+5, bb[2]-5, bb[4]+5)
+# crop environmental rasters by the extent to make the background extent
+bg.ext <- crop(envs, bb.buf)
+# generate up to 10,000 random points within the background extent (we'll sample from the "biome" raster as it has more holes)
+bg <- randomPoints(bg.ext[[9]], n=10000)
+# run ENMeval
+e <- ENMevaluate(occs, bg.ext, bg, method='block', RMvalues=1:3, fc=c('L','LQ'), algorithm='maxent.jar')
+# find the index number of the model with the highest mean test AUC: this will be the optimal model
+i <- which(e@results$Mean.AUC == max(e@results$Mean.AUC))
+# extract the optimal model object
+m <- e@models[[i]]
+# create a cloglog prediction and plot
+p <- predict(m, bg.ext, args=c("outputformat=cloglog"))
+plot(p)
+# further south extent for model transfer
+t.bb <- extent(-80,-40,-60,-30)
+# crop environmental predictors by transfer extent
+t.ext <- crop(envs, t.bb)
+# transfer the model to this new area in cloglog form and plot
+p.t <- predict(m, t.ext, args=c("outputformat=cloglog"))
+plot(p.t)
+```
 
 #Build an `rmm` object
 To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in the 
 
 ```{r}
-rmm=rmmTemplate()
-rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
-# rmmAutoFillData(rmm,species=)
-raster.files=list.files(system.file("extdata/Env_Demo",package='rangeModelMetadata'),full.names = TRUE)
-env=raster::stack(raster.files)
-rmm=rmmAutofillEnvironment(rmm,env,transfer=0) # for fitting environment
-rmm=rmmAutofillEnvironment(rmm,env,transfer=1) # for transfer environment 1 (assuming different than for fitting)
-rmm=rmmAutofillEnvironment(rmm,env,transfer=2) # for transfer environment 2 (assuming different than for fitting)
-# rmmAutoFillMaxent(rmm,species=)
-# rmmAutoFillPrediction(rmm,species=,layer=1)
-rmmCheckFull(rmm) #print just the non-NULL fields
+# generate an empty range model metadata template
+rmm <- rmmTemplate() %>%
+  # autofill info for R packages used
+  rmmAutofillPackageCitation(c('spocc','sp','raster','dismo','ENMeval')) %>%
+  rmmAutofillspocc(bv$gbif) %>%
+  # autofill info for environmental rasters used for model training and transfer
+  rmmAutofillEnvironment(bg.ext, transfer=0) %>%
+  rmmAutofillEnvironment(t.ext, transfer=1) %>%
+  # autofill for ENMeval
+  rmmAutofillENMeval(e, selectionCriteria="highest mean test AUC", optimalModelIndex=i) %>%
+  # autofill for model prediction in background extent and transfer extent
+  rmmAutofillPrediction() %>%
+  rmmAutofillPrediction(transfer=1)
+  
+# print just the non-NULL fields  
+rmmCheckFull(rmm)
+  
+
+## fill in remaining fields for model prediction in background extent
+#rmm$output$prediction$units <- "cloglog"
+#rmm$output$prediction$minVal <- cellStats(p, min)
+#rmm$output$prediction$maxVal <- cellStats(p, max)
+## clamping is the default for predict()
+#rmm$output$prediction$extrapolation <- "clamping"
 ```
