--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -19,25 +19,28 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(rangeModelMetadata)
+library(sp)
+library(dplyr)
+library(spocc)
 ```
 
 ##What is an rmm (rangeModelMetadata) object?
 
 A simple `rmm` object is a list object that is structured to contain metadata pertaining to species range models. Here we make an empty `rmm` object containing only the obligate set of fields.
 ```{r}
-rmm1=rmmTemplate(useCase=c('obligate')) 
+rmm1=rmmTemplate(family=c('obligate')) 
 str(rmm1)
 ```
 
-A more complex `rmm` object with all predefined fields.
+A more complex `rmm` object with all predefined fields. It may seem like a lot at first, but we're trying to keep you all happy, and many of these won't be needed. As we explore the hierarchy below, it'll seem simpler...
 ```{r}
-rmm2=rmmTemplate(useCase=NULL)
+rmm2=rmmTemplate(family=NULL)
 str(rmm2)
 ```
 
 ##Populating an rmm object
 
-`rmm` objects can be populated manually by entering data direcetly into the fields, or through the use of several helper functions.  Although the `rmm` object template already contain a number of fields that depend on the specified `useCase`, users can also add new fields as needed.  We are able to provide suggestions of both common fields to add and common values for many fields.
+`rmm` objects can be populated manually by entering data direcetly into the fields, or through the use of several helper functions.  Although the `rmm` object template already contains a number of fields that depend on the specified `family`, users can also add new fields as needed.  We provide suggestions of both common fields to add and common values for many fields.
 
 Not sure what to enter in different fields? We can suggest options.
 
@@ -57,51 +60,53 @@ rmmSuggest('$model$maxent$featureSet')
 ```
 
 
-To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in the 
+To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in a range modeling workflow. Also see `vignette('rmm_workflow')` for a demonstration of how to fill in metadata during an SDM workflow.
 
 ```{r}
 rmm=rmmTemplate()
 rmm=rmmAutofillPackageCitation(rmm,c('raster','sp'))
-# rmmAutoFillData(rmm,species=)
-raster.files=list.files(system.file("extdata/Env_Demo",package='rangeModelMetadata'),full.names = TRUE)
-env=raster::stack(raster.files)
+# search GBIF for occurrence data to demonstrate the autofill function
+bv=occ('Bradypus variegatus', 'gbif', limit=50, has_coords=TRUE)
+rmm=rmmAutofillspocc(rmm,bv$gbif)
+# get some env layers to demonstrate the autofill function
+rasterFiles=list.files(path=paste(system.file(package='dismo'), '/ex', sep=''),
+                       pattern='grd', full.names=TRUE)
+# make a stack of the rasters
+env=raster::stack(rasterFiles)
 rmm=rmmAutofillEnvironment(rmm,env,transfer=0) # for fitting environment
-rmm=rmmAutofillEnvironment(rmm,env,transfer=1) # for transfer environment 1 (assuming different than for fitting)
-rmm=rmmAutofillEnvironment(rmm,env,transfer=2) # for transfer environment 2 (assuming different than for fitting)
-# rmmAutoFillMaxent(rmm,species=)
-# rmmAutoFillPrediction(rmm,species=,layer=1)
-rmmCheckFull(rmm) #print just the non-NULL fields
+# just using the same rasters for demonstration; in practice these are different
+rmm=rmmAutofillEnvironment(rmm,env,transfer=1) # for transfer environment 1
+rmm=rmmAutofillEnvironment(rmm,env,transfer=2) # for transfer environment 2 
 ```
 
 To see what fields you might've missed...
 ```{r}
-# rmmFindEmpties(rmm)
-# rmmCleanEmpties(rmm)
+empties=rmmCheckEmpty(rmm)
 ```
+<!-- # rmmCleanEmpties(rmm) -->
 
 ##Checking an rmm object
 
 To check the field names in your object, use the function `rmmNameCheck`
 
 ```{r}
-
-rmm<-rmmTemplate() # Make an empty template
-rmm$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # # Add a new, non-standard field
-# temporary dev error
-rmm=rmmCheckName(rmm) # Checking the names should identify the new, non-standard field we've added ("taxonomy_source")
-
+# Make an empty template
+rmm1<-rmmTemplate() 
+# Add a new, non-standard field
+rmm1$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # # Checking the names identifies the new, non-standard field we've added ("taxonomy_source")
+rmm1=rmmCheckName(rmm1) 
 ```
 
 To check the field values in your rmm object, use the function `rmmValueCheck`
 ```{r}
-rmm<-rmmTemplate() #First, we create an empty rmm template
-rmm$data$environment$variableNames<- c("bio1", "bio 2", "bio3", "cromulent") #We add 3 of the bioclim layers, including a spelling error (an extra space) in bio2, and a word that is clearly not a climate layer, 'cromulent'.
-# TO FIX after chaging the usecase isssue
-#rmmCheckValue(rmm = rmm) #Now, when we check the values, we see that bio1 and bio2 are reported as exact matches, while 'bio 2' is flagged as a partial match with a suggested value of 'bio2', and 'cromulent' is flagged as not matched at all.
-
+#First, we create an empty rmm template
+rmm1<-rmmTemplate() 
+#We add 3 of the bioclim layers, including a spelling error (an extra space) in bio2, and a word that is clearly not a climate layer, 'cromulent'.
+rmm1$data$environment$variableNames<- c("bio1", "bio 2", "bio3", "cromulent") 
+#Now, when we check the values, we see that bio1 and bio2 are reported as exact matches, while 'bio 2' is flagged as a partial match with a suggested value of 'bio2', and 'cromulent' is flagged as not matched at all.
+rmmCheckValue(rmm = rmm1) 
 #If we'd like to return a dataframe containing this information in a perhaps more useful format:
-# TO FIX after chaging the usecase isssue
-#rmmCheckValue_output<-rmmCheckValue(rmm = rmm,returnData = TRUE)
+rmmCheckValueOutput<-rmmCheckValue(rmm = rmm1,returnData = TRUE)
 ```
 
   <!-- names<-rmmCheckName(rmm,returnData = T) -->
@@ -113,10 +118,15 @@ rmm$data$environment$variableNames<- c("bio1", "bio 2", "bio3", "cromulent") #We
   <!-- empty_values<-rmmCheckEmpty(rmm = rmm,useCase = useCase) -->
 
 
-These 'check' functions work by comparing the values or names within an rmm object to those in a data dictionary.  These functions are designed to check for non-standard values and names, and DO NOT necessarily identify correct vs. incorrect values/names.  Non-standard values may be perfectly valid, or they may be erroneous, and the user will have to make this distinction.
+These 'check' functions work by comparing the values or names within an `rmm` object to those in a data dictionary.  These functions are designed to check for non-standard values and names, and DO NOT necessarily identify correct vs. incorrect values/names.  Non-standard values may be perfectly valid, or they may be erroneous, and the user will have to make this distinction.
+
+To run all the available checks at once, we'll check the object that we filled in a few chunks back.
+```{r}
+# rmmCheckFinalize(rmm, family=c('base','obligate'))
+```
 
 
-##Outputing an rmm object
+##Outputing an `rmm` object
 
 To make `rmm` objects portable to other interfaces, they are readily written to csv format.
 ```{r,eval=F}
