--- a/vignettes/rmm_vignette.Rmd
+++ b/vignettes/rmm_vignette.Rmd
@@ -17,11 +17,11 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
+```{r,message=FALSE}
 library(rangeModelMetadata)
 library(sp)
-library(dplyr)
 library(spocc)
+library(dplyr)
 ```
 
 ##What is an rmm (rangeModelMetadata) object?
@@ -32,7 +32,7 @@ rmm1=rmmTemplate(family=c('obligate'))
 str(rmm1)
 ```
 
-A more complex `rmm` object with all predefined fields. It may seem like a lot at first, but we're trying to keep you all happy, and many of these won't be needed. As we explore the hierarchy below, it'll seem simpler...
+A more complex `rmm` object with all predefined fields. It may seem like a lot at first, but we're trying to keep you all happy, and many of these won't be needed. For example, you'll only be using one modeling algorithm, so you'll only be selecting one of the fields below under `$model`. Or, you may not use five different methods for cleaning geographic issues with your data under `$dataPrep$geographic` and so you'll end up omitting many of those fields. As we explore the hierarchy below, it'll seem simpler...
 ```{r}
 rmm2=rmmTemplate(family=NULL)
 str(rmm2)
@@ -40,9 +40,9 @@ str(rmm2)
 
 ##Populating an rmm object
 
-`rmm` objects can be populated manually by entering data direcetly into the fields, or through the use of several helper functions.  Although the `rmm` object template already contains a number of fields that depend on the specified `family`, users can also add new fields as needed.  We provide suggestions of both common fields to add and common values for many fields.
+`rmm` objects can be populated manually by entering data direcetly into the fields (see `vignette('rmm_Multispecies',package='rangeModelMetadata')`), or through the use of several helper functions.  Although the `rmm` object template already contains a number of fields that depend on the specified `family` (see options with `rmmFamilies()`), users can also add new fields as needed.  We provide suggestions of both common fields to add and common values for many fields.
 
-Not sure what to enter in different fields? We can suggest options.
+Not sure which fields are available or what values to enter? We can suggest options.
 
 ```{r}
 rmmSuggest('dataPrep',fullFieldDepth=FALSE)
@@ -50,17 +50,24 @@ rmmSuggest('dataPrep',fullFieldDepth=TRUE) # for all fields below the specified 
 rmmSuggest('dataPrep$errors$duplicateRemoval')
 rmmSuggest('dataPrep$errors$duplicateRemoval$rule')
 ```
+Here, it may help to learn the two pieces of unavoidable jargon we use:
+* A __field__ describes levels of the hierarchy. E.g., `dataPrep` is field 1, `errors` is field 2 and `duplicateRemoval` is field 3.
+* An __entity__ is described by a complete set of __fields__ and has a particular value. In the example above `'dataPrep$errors$duplicateRemoval$rule` is an entity, and it can take one of the four suggested values:  "Environmental duplicates" "coordinate duplicates", "other (specify in Notes)", "NA".
+
+Note above, that when you ask for suggestions for a field (the first three lines), you get suggestions of the relevant fields to consider. But the last line refers to to the lowest level in the hierachy, an __entity__ and so values are suggested.
 
 Another more complex example:
 
 ```{r}
 rmmSuggest('model')
-rmmSuggest('model$maxent$')
+rmmSuggest('model$maxent')
 rmmSuggest('$model$maxent$featureSet')
 ```
 
 
-To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in a range modeling workflow. Also see `vignette('rmm_workflow')` for a demonstration of how to fill in metadata during an SDM workflow.
+To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in a range modeling workflow. 
+
+<!-- Also see `vignette('rmm_workflow')` for a demonstration of how to fill in metadata during an SDM workflow. -->
 
 ```{r}
 rmm=rmmTemplate()
@@ -87,7 +94,7 @@ empties=rmmCheckEmpty(rmm)
 
 ##Checking an rmm object
 
-To check the field names in your object, use the function `rmmNameCheck`
+To check the field names in your object, use `rmmNameCheck`
 
 ```{r}
 # Make an empty template
@@ -96,6 +103,7 @@ rmm1<-rmmTemplate()
 rmm1$dataPrep$biological$taxonomicHarmonization$taxonomy_source<-"The Plant List" # # Checking the names identifies the new, non-standard field we've added ("taxonomy_source")
 rmm1=rmmCheckName(rmm1) 
 ```
+This check identifies the entity `$dataPrep$biological$taxonomicHarmonization$taxonomy_source` as non-standard. It's non-standard because it's not an entity in the data dictionary, and I just added it. That's not a violation or anything bad, this check just let's you know it's there. This check can be useful to detect misspellings of standardized field names too.
 
 To check the field values in your rmm object, use the function `rmmValueCheck`
 ```{r}
@@ -118,13 +126,12 @@ rmmCheckValueOutput<-rmmCheckValue(rmm = rmm1,returnData = TRUE)
   <!-- empty_values<-rmmCheckEmpty(rmm = rmm,useCase = useCase) -->
 
 
-These 'check' functions work by comparing the values or names within an `rmm` object to those in a data dictionary.  These functions are designed to check for non-standard values and names, and DO NOT necessarily identify correct vs. incorrect values/names.  Non-standard values may be perfectly valid, or they may be erroneous, and the user will have to make this distinction.
+These 'check' functions work by comparing the values or field names within an `rmm` object to those in a data dictionary.  These functions are designed to check for non-standard values and names, and DO NOT necessarily identify correct vs. incorrect values/names.  Non-standard values may be perfectly valid, or they may be erroneous, and the user will have to make this distinction.
 
-To run all the available checks at once, we'll check the object that we filled in a few chunks back.
+To run all the available checks at once, we'll check the object that we filled in a few chunks back. (Note that this is commented out because it's an interactive function that asks the user to input responses.)
 ```{r}
 # rmmCheckFinalize(rmm, family=c('base','obligate'))
 ```
-
 
 ##Outputing an `rmm` object
 
