--- a/vignettes/rmm_Multispecies.Rmd
+++ b/vignettes/rmm_Multispecies.Rmd
@@ -8,7 +8,7 @@ output:
     toc: true
     toc_depth: 3
 vignette: >
-  %\VignetteIndexEntry{An overview of making rangeModelMetadata objects}
+  %\VignetteIndexEntry{rangeModelMetaData with Multiple Species}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -25,7 +25,7 @@ library(raster)
 
 #Authorship
 ```{r}
-rmm <- rmmTemplate(family=c('obligate'))
+rmm <- rmmTemplate(family=c('base'))
 
 rmm$authorship$rmmName <- 'Owens_2015_Gadids'
 rmm$authorship$names <- 'Owens, Hannah'
