--- a/vignettes/rmm_workflowWithExampleRangeModel.Rmd
+++ b/vignettes/rmm_workflowWithExampleRangeModel.Rmd
@@ -8,7 +8,7 @@ output:
     toc: true
     toc_depth: 3
 vignette: >
-  %\VignetteIndexEntry{An overview of making rangeModelMetadata objects}
+  %\VignetteIndexEntry{An example workflow for building rangeModelMetadata objects}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -27,6 +27,7 @@ library(dismo)
 library(ENMeval)
 library(dplyr)
 library(sp)
+library(spThin)
 ```
 
 # Get data
@@ -47,8 +48,10 @@ envs <- raster::stack(files)
 # Prepare data
 
 ```{r}
+# thin points to remove spatial autocorrelation
+occs.thinned <- spThin::thin.algorithm(data.frame(occs), thin.par = 20, reps = 1)
 # make a spatial points object for the occurrences
-occs.sp <- sp::SpatialPoints(occs)
+occs.sp <- sp::SpatialPoints(occs.thinned[[1]])
 # get the bounding box
 bb <- sp::bbox(occs.sp)
 # make extent object and buffer by 5 degrees
@@ -56,7 +59,7 @@ bb.buf <- raster::extent(bb[1]-5, bb[3]+5, bb[2]-5, bb[4]+5)
 # crop environmental rasters by the extent to make the background extent
 bg.ext <- raster::crop(envs, bb.buf)
 # generate up to 10,000 random points within the background extent (we'll sample from the "biome" raster as it has more holes)
-bg <-dismo::randomPoints(bg.ext[[9]], n=10000)
+bg <-dismo::randomPoints(bg.ext[[9]], n=10000) 
 ```
 
 # Modeling
@@ -69,7 +72,7 @@ e <- ENMeval::ENMevaluate(occs, bg.ext, bg, method='block', RMvalues=1:3, fc=c('
 # Model performance
 ```{r}
 # find the index number of the model with the highest mean test AUC: this will be the optimal model
-i <- which(e@results$Mean.AUC == max(e@results$Mean.AUC))
+i <- which(e@results$avg.test.AUC  == max(e@results$avg.test.AUC ))
 # extract the optimal model object
 m <- e@models[[i]]
 ```
@@ -101,7 +104,7 @@ plot(p.t)
 We start by filling in some key authorship information.
 ```{r}
 # generate an empty range model metadata template
-rmm=rmmTemplate(family=c('obligate')) 
+rmm=rmmTemplate(family=c('base')) 
 rmm$authorship$rmmName='MerowMaitnerOwensKassEnquistGuralnick_2018_Acer_Maxent_b3'
 rmm$authorship$names='Merow, Cory and Maitner, Brian and Owens, Hannah and Kass, Jamie and Enquist, Brian and Guralnick, Rob'
 rmm$authorship$contact='cory.merow@gmail.com'
@@ -128,23 +131,11 @@ rmm=rmmAutofillENMeval(rmm,e,
 rmm=rmmAutofillPackageCitation(rmm=rmm,
                               packages=c('spocc','sp','raster','dismo','ENMeval'))
 ```  
-<!-- sorry to toss this pretty piping but i think its easier for people to step through the code line by line -->
-<!-- # rmm <- rmmTemplate() %>% -->
-<!-- #   # autofill info for R packages used -->
-<!-- #   rmmAutofillPackageCitation(c('spocc','sp','raster','dismo','ENMeval')) %>% -->
-<!-- #   rmmAutofillspocc(bv$gbif) %>% -->
-<!-- #   # autofill info for environmental rasters used for model training and transfer -->
-<!-- #   rmmAutofillEnvironment(bg.ext, transfer=0) %>% -->
-<!-- #   rmmAutofillEnvironment(t.ext, transfer=1) %>% -->
-<!-- #   # autofill for ENMeval -->
-<!-- #   rmmAutofillENMeval(e, selectionCriteria="highest mean test AUC", optimalModelIndex=i) %>% -->
-<!-- #   # autofill for model prediction in background extent and transfer extent -->
-<!-- #   rmmAutofillPrediction() %>% -->
-<!-- #   rmmAutofillPrediction(transfer=1) -->
 
 Now we need to fill in a few fields manually. 
 
 ```{r}
+rmm$dataPrep$geographic$spatialThin$rule="20km used as max distance between points"
 # fill in remaining fields for model prediction in background extent
 rmm$output$prediction$units <- "relative occurrence rate"
 rmm$output$prediction$minVal <- cellStats(p, min)
