--- a/vignettes/rmm_Multispecies.Rmd
+++ b/vignettes/rmm_Multispecies.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(cache= FALSE)
 ```
 
-```{r}
+```{r,message=FALSE}
 library(rangeModelMetadata)
 library(raster)
 ```
