field name conventions

--- a/vignettes/rmm_Multispecies.Rmd
+++ b/vignettes/rmm_Multispecies.Rmd
@@ -102,23 +102,23 @@ rmm$dataPrep$spatialThin$rule <- "Reduced spatial resolution of points to match 
 #Model
 
 ```{r}
-rmm$model$algorithm <- "maxent"
-rmm$model$algorithmCitation <- '@inproceedings{phillips2004maximum, title={A maximum entropy approach to species distribution modeling}, author={Phillips, Steven J and Dudik, Miroslav and Schapire, Robert E}, booktitle={Proceedings of the twenty-first international conference on Machine learning},pages={83},year={2004},organization={ACM}}'
-rmm$model$maxent$featureSet <- "LQP"
-rmm$model$maxent$notes <- "Ten bootstrap replicates trained with 50% of occurrence points chosen using random seed, maximum of 10000 iterations"
+rmm$modelFit$algorithm <- "maxent"
+rmm$modelFit$algorithmCitation <- '@inproceedings{phillips2004maximum, title={A maximum entropy approach to species distribution modeling}, author={Phillips, Steven J and Dudik, Miroslav and Schapire, Robert E}, booktitle={Proceedings of the twenty-first international conference on Machine learning},pages={83},year={2004},organization={ACM}}'
+rmm$modelFit$maxent$featureSet <- "LQP"
+rmm$modelFit$maxent$notes <- "Ten bootstrap replicates trained with 50% of occurrence points chosen using random seed, maximum of 10000 iterations"
 ```
 
 #Output
 
 ```{r}
-rmm$output$prediction$units <- "absolute probability"
-rmm$output$transfer$environment1$units <- "absolute probability"
-rmm$output$transfer$environment1$extrapolation <- "No clamping or extrapolation"
+rmm$prediction$continuous$units <- "absolute probability"
+rmm$prediction$transfer$environment1$units <- "absolute probability"
+rmm$prediction$transfer$environment1$extrapolation <- "No clamping or extrapolation"
 ```
 
 #Performance
 ```{r}
-rmm$performance$notes <- "Inferred distribution congruent with known ranges for all species."
+rmm$evaluation$notes <- "Inferred distribution congruent with known ranges for all species."
 ```
 
 #Tidying it all up
