--- a/vignettes/rmm_workflowWithExampleRangeModel.Rmd
+++ b/vignettes/rmm_workflowWithExampleRangeModel.Rmd
@@ -30,9 +30,11 @@ library(ENMeval)
 library(dplyr)
 library(sp)
 library(spThin)
+library(jsonlite)
 ```
 
-# Get data
+# Building a range model
+## Get data
 ```{r}
 # search GBIF for occurrence data
 bv <- rgbif::occ_search(scientificName ='Bradypus variegatus')
@@ -56,7 +58,7 @@ envs <- raster::stack(files)
 <!-- (cors=layerStats(envs, 'pearson', na.rm=T)[[1]]) -->
 
 
-# Prepare data
+## Prepare data
 
 ```{r}
 # thin points to remove spatial autocorrelation
@@ -73,14 +75,14 @@ bg.ext <- raster::crop(envs, bb.buf)
 bg <- dismo::randomPoints(bg.ext[[4]], n=10000) 
 ```
 
-# Modeling
+## Model Fitting
 
 ```{r}
 # run ENMeval
 e <- ENMeval::ENMevaluate(occs, bg.ext, bg, method='block', RMvalues=1:3, fc=c('L','LQ'), algorithm='maxent.jar')
 ```
 
-# Model performance
+## Model evaluation
 ```{r}
 # find the index number of the model with the highest mean test AUC: this will be the optimal model
 i <- which(e@results$avg.test.AUC  == max(e@results$avg.test.AUC ))
@@ -88,7 +90,7 @@ i <- which(e@results$avg.test.AUC  == max(e@results$avg.test.AUC ))
 m <- e@models[[i]]
 ```
 
-# Make predictions
+## Predictions
 ```{r}
 # create a cloglog prediction and plot
 #p <- predict(m, bg.ext, args=c("outputformat=cloglog"))
@@ -103,11 +105,11 @@ t.bb <- raster::extent(-80,-40,-60,-30)
 # crop environmental predictors by transfer extent
 t.ext <- raster::crop(envs, t.bb)
 ```
-# Transfer model
+
+## Transfer model
 ```{r}
-# transfer the model to this new area in cloglog form and plot
+# transfer the model to this new area and plot
 notNA.t <- complete.cases(values(t.ext))
-#p.t <- predict(m, t.ext, args=c("outputformat=cloglog"))
 tmp <- predict(m, values(t.ext)[notNA.t,], type='link')
 p.t <- t.ext[[1]] 
 values(p.t) <- NA 
@@ -134,6 +136,8 @@ or
 str(rmm,2)
 ```
 
+## Authorship
+
 We start by filling in some key authorship information.
 ```{r}
   # in the form Author_Year_Taxa_Model_fw (where the last 2 characters are random)
@@ -150,6 +154,7 @@ rmm$authorship$miscNotes='Funding from NSF grant DBI-1661510 and DBI-1913673.'
 <!-- as(ref,'citation') -->
 
 
+## Autofill when possible
 To make it easier to fill some `rmm` fields, we provide autofill functions that extract relevant information from common R objects used in the 
 
 ```{r}
@@ -167,8 +172,8 @@ rmm <- rmmAutofillPackageCitation(rmm=rmm,
                                   packages= c('rgbif','sp','raster','dismo','ENMeval'))
 ```  
 
+## Data 
 Now we need to fill in a few fields manually. 
-
 
 ```{r}
 rmm$data$occurrence$sources=lapply(rgbif::gbif_citation(bv),function(x) x$citation$citation)
@@ -177,6 +182,8 @@ rmm$data$occurrence$backgroundSampleSize=nrow(bg)
 rmm$data$occurrence$yearMin=1970
 rmm$data$occurrence$yearMax=2000
 ```
+
+Note that in the use of `gbif_citation` above, we use a journal formatted style for references, instead of bibtex, as used below. We chose this because the journal formatting is returned by `gbif_citation` and bibtex it not available. Rather than request that authors spend an inordinate amount of time manually reformatting perfectly good citations (which is error prone) we suggest simply using this default format. 
 
 ```{r}
 rmm$data$environment$yearMin=1970
@@ -203,31 +210,111 @@ rmm$data$environment$sources='
 rmm$data$dataNotes='WorldClim data accessed through dismo v1.1-4'
 ```
 
+
+To fill in the min and max values of each data layer, it's easiest to create a `data.frame` and convert that to JSON. 
+```{r}
+mm=data.frame(rbind(apply(values(envs),2,min,na.rm=T),
+                    apply(values(envs),2,max,na.rm=T)))
+rmm$data$environment$minVal=toJSON(mm[1,])
+(rmm$data$environment$maxVal=toJSON(mm[2,])) # printed to show format
+```
+
+To fill in the extent of the layers, you can either do it manually or programatically. I do it programatically because I think it's easier to make it JSON format.
+
+```{r}
+(ex=extent(envs))
+# make an extent object a data.frame, because that's easy to use with toJSON
+tmp=as.data.frame(lapply(slotNames(ex), function(i) slot(ex, i) )) 
+names(tmp)=slotNames(ex)
+rmm$data$environment$extentSet=toJSON(tmp)
+```
+
+Have I missed anything?
+```{r}
+rmmSuggest('$data') # note the use of quotes!
+```
+Oh yeah, we haven't dealt with the environment to which the model is transferred. In the modeling above we transferred to an adjacent region. So this follows analogous information provided for the fitting layers.
+
+
+```{r}
+rmm$data$transfer$environment1$yearMin=1970
+rmm$data$transfer$environment1$yearMin=2000
+rmm$data$transfer$environment1$resolution=paste0(res(t.ext)[1],' degrees')
+rmm$data$transfer$environment1$sources='
+@ARTICLE{Fick2017-qs,
+  title     = "{WorldClim} 2: new 1‐km spatial resolution climate surfaces for
+               global land areas",
+  author    = "Fick, S E and Hijmans, R J",
+  abstract  = "We created a new dataset of spatially interpolated monthly
+               climate data for global land areas at a very high spatial
+               resolution (approximately 1 km 2). We included monthly
+               temperature (minimum, maximum and average), precipitation, solar
+               radiation, vapour pressure and wind speed, aggregated across a
+               target temporal range of 1970--2000, using data from between
+               9000 and 60 000 weather stations. Weather station data were
+               interpolated using thin-plate splines with covariates including
+               elevation, distance to the coast and three satellite-derived …",
+  journal   = "Int. J. Climatol.",
+  publisher = "Wiley Online Library",
+  year      =  2017
+}
+'
+
+mm=data.frame(rbind(apply(values(t.ext),2,min,na.rm=T),
+                    apply(values(t.ext),2,max,na.rm=T)))
+rmm$data$transfer$environment1$minVal=toJSON(mm[1,])
+(rmm$data$transfer$environment1$maxVal=toJSON(mm[2,])) # printed to show format
+
+(ex=extent(t.ext))
+# make an extent object a data.frame, because that's easy to use with toJSON
+tmp=as.data.frame(lapply(slotNames(ex), function(i) slot(ex, i) )) 
+names(tmp)=slotNames(ex)
+rmm$data$transfer$environment1$extentSet=toJSON(tmp)
+```
+
+## Data Preparation (cleaning)
+
 ```{r}
 # duplicated observations removed within the grid cells defined by the environmental layers
 rmm$dataPrep$biological$duplicateRemoval$rule='cell' 
 rmm$dataPrep$geographic$spatialThin$rule= "20km used as max distance between points"
 ```
 
+## Model Fitting 
+```{r}
+
+```
+
+
+## Prediction
+
 ```{r}
 # fill in remaining fields for model prediction in background extent
-rmm$output$prediction$units <- "relative occurrence rate"
-rmm$output$prediction$minVal <- cellStats(p, min)
-rmm$output$prediction$maxVal <- cellStats(p, max)
+rmm$prediction$continous$units <- "relative occurrence rate"
+rmm$prediction$continous$minVal <- cellStats(p, min)
+rmm$prediction$continous$maxVal <- cellStats(p, max)
 # clamping is the default for predict()
-rmm$output$prediction$extrapolation <- "clamping"
+rmm$prediction$extrapolation <- "clamping"
 ```
+
+## Evaluation
+```{r}
+
+```
+
+## Code
+
+```{r}
+
+```
+
+
+## Check your `rmm` object
 
 Let's see how we're doing so far by printing all the filled fields.
 ```{r}
 #print just the non-NULL fields
 rmmCleanNULLs(rmm)
-```
-
-Now we'll add in some more key entities that aren't readily autfilled
-```{r}
-rmm$data$occurrence$yearMin <- 1970
-rmm$data$occurrence$yearMax <- 2000
 ```
 
 
